--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -90,6 +90,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Breed.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="DataTableUtils.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
