--- a/pet_management/App.config
+++ b/pet_management/App.config
@@ -11,7 +11,7 @@
         <value>Skin/Office 2019 Colorful</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value>Forest</value>
+        <value></value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -26,7 +26,7 @@
         <value></value>
       </setting>
       <setting name="RegisterUserSkins" serializeAs="String">
-        <value></value>
+        <value>True</value>
       </setting>
       <setting name="RegisterBonusSkins" serializeAs="String">
         <value>True</value>
