--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleBUS.cs" />
     <Compile Include="SpeciesBUS.cs" />
+    <Compile Include="StaffBUS.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
