create TextBoxUtils, update staff feature

--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -153,6 +153,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>QLHTDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="TextBoxUtils.cs" />
     <EmbeddedResource Include="frmAddCustomer.resx">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
     </EmbeddedResource>
