--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -102,6 +102,7 @@
     </Compile>
     <Compile Include="BaseDAO.cs" />
     <Compile Include="MapperColumn.cs" />
+    <Compile Include="PetDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDAO.cs" />
