--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BreedBUS.cs" />
     <Compile Include="CustomerBUS.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
