complete group service

--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="BaseDAO.cs" />
+    <Compile Include="GroupServiceDAO.cs" />
     <Compile Include="MapperColumn.cs" />
     <Compile Include="PetDAO.cs" />
     <Compile Include="Program.cs" />
