create Service and Unit

--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -104,8 +104,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
+    <Compile Include="Service.cs" />
     <Compile Include="Species.cs" />
     <Compile Include="Staff.cs" />
+    <Compile Include="Unit.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
