--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -102,8 +102,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleBUS.cs" />
+    <Compile Include="ServiceBUS.cs" />
     <Compile Include="SpeciesBUS.cs" />
     <Compile Include="StaffBUS.cs" />
+    <Compile Include="UnitBUS.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
