--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -108,8 +108,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoleDAO.cs" />
+    <Compile Include="ServiceDAO.cs" />
     <Compile Include="SpeciesDAO.cs" />
     <Compile Include="StaffDAO.cs" />
+    <Compile Include="UnitDAO.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
