--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -250,6 +250,7 @@
     <None Include="Properties\DataSources\DTO.Service.datasource" />
     <None Include="Properties\DataSources\DTO.Species.datasource" />
     <None Include="Properties\DataSources\DTO.Staff.datasource" />
+    <None Include="Properties\DataSources\DTO.Unit.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
