--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -90,24 +90,25 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Breed.cs" />
-    <Compile Include="Customer.cs" />
+    <Compile Include="entity\Breed.cs" />
+    <Compile Include="entity\Customer.cs" />
     <Compile Include="DataTableUtils.cs" />
+    <Compile Include="entity\Part.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GroupService.cs" />
-    <Compile Include="Pet.cs" />
+    <Compile Include="entity\GroupService.cs" />
+    <Compile Include="entity\Pet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Role.cs" />
-    <Compile Include="Service.cs" />
-    <Compile Include="Species.cs" />
-    <Compile Include="Staff.cs" />
-    <Compile Include="Unit.cs" />
+    <Compile Include="entity\Role.cs" />
+    <Compile Include="entity\Service.cs" />
+    <Compile Include="entity\Species.cs" />
+    <Compile Include="entity\Staff.cs" />
+    <Compile Include="entity\Unit.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
