--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -89,7 +89,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseBUS.cs" />
+    <Compile Include="base\BaseBUS.cs" />
     <Compile Include="BreedBUS.cs" />
     <Compile Include="CustomerBUS.cs" />
     <Compile Include="Form1.cs">
