--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -111,11 +111,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmPart.cs">
+    <Compile Include="form\part\frmPart.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmPart.Designer.cs">
+    <Compile Include="form\part\frmPart.Designer.cs">
       <DependentUpon>frmPart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="form\part\frmPartInfor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="form\part\frmPartInfor.Designer.cs">
+      <DependentUpon>frmPartInfor.cs</DependentUpon>
     </Compile>
     <Compile Include="utils\DataProvider.cs" />
     <Compile Include="utils\EntityState.cs" />
@@ -204,6 +210,9 @@
     <EmbeddedResource Include="form\customer\frmAddCustomer.resx">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="form\part\frmPartInfor.resx">
+      <DependentUpon>frmPartInfor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="form\pet\frmBreed.resx">
       <DependentUpon>frmBreed.cs</DependentUpon>
     </EmbeddedResource>
@@ -234,7 +243,7 @@
     <EmbeddedResource Include="form\staff\frmStaffInfo.resx">
       <DependentUpon>frmStaffInfo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmPart.resx">
+    <EmbeddedResource Include="form\part\frmPart.resx">
       <DependentUpon>frmPart.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
@@ -301,6 +310,8 @@
   <ItemGroup>
     <Content Include="MailTemplate.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="form\main\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
