--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -99,6 +99,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GroupServiceBUS.cs" />
+    <Compile Include="MakeBUS.cs" />
     <Compile Include="PartBUS.cs" />
     <Compile Include="PetBUS.cs" />
     <Compile Include="Program.cs" />
