--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -93,6 +93,7 @@
     <Compile Include="entity\Breed.cs" />
     <Compile Include="entity\Customer.cs" />
     <Compile Include="DataTableUtils.cs" />
+    <Compile Include="entity\Make.cs" />
     <Compile Include="entity\Part.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
