--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -263,6 +263,7 @@
     <None Include="Properties\DataSources\DTO.Breed.datasource" />
     <None Include="Properties\DataSources\DTO.Customer.datasource" />
     <None Include="Properties\DataSources\DTO.GroupService.datasource" />
+    <None Include="Properties\DataSources\DTO.Make.datasource" />
     <None Include="Properties\DataSources\DTO.Part.datasource" />
     <None Include="Properties\DataSources\DTO.Pet.datasource" />
     <None Include="Properties\DataSources\DTO.Role.datasource" />
