--- a/pet_management/App.config
+++ b/pet_management/App.config
@@ -11,7 +11,7 @@
         <value>Skin/Office 2019 Colorful</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value></value>
+        <value>Custom/Custom Palette #1</value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
@@ -41,7 +41,36 @@
         <value></value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
-        <value />
+        <value>
+          <CustomPaletteCollection>
+            <Skin Name="Office 2019 Colorful">
+              <SvgPalette Name="Custom Palette #1">
+                <SvgColor Name="Paint" Value="248,248,248" />
+                <SvgColor Name="Paint High" Value="255,255,255" />
+                <SvgColor Name="Paint Shadow" Value="0,0,0" />
+                <SvgColor Name="Paint Deep Shadow" Value="230,230,230" />
+                <SvgColor Name="Brush" Value="72,70,68" />
+                <SvgColor Name="Brush High" Value="72,70,68" />
+                <SvgColor Name="Brush Light" Value="119,119,119" />
+                <SvgColor Name="Brush Major" Value="171,171,171" />
+                <SvgColor Name="Brush Minor" Value="210,210,210" />
+                <SvgColor Name="Accent Paint" Value="16,110,190" />
+                <SvgColor Name="Accent Paint Dark" Value="0,90,158" />
+                <SvgColor Name="Accent Paint Light" Value="205,230,247" />
+                <SvgColor Name="Accent Paint Lighter" Value="230,242,250" />
+                <SvgColor Name="Accent Brush" Value="255,255,255" />
+                <SvgColor Name="Accent Brush Light" Value="179,214,242" />
+                <SvgColor Name="Red" Value="237,61,59" />
+                <SvgColor Name="Green" Value="48,144,72" />
+                <SvgColor Name="Blue" Value="30,139,205" />
+                <SvgColor Name="Yellow" Value="251,152,59" />
+                <SvgColor Name="Black" Value="87,87,85" />
+                <SvgColor Name="Gray" Value="169,168,168" />
+                <SvgColor Name="White" Value="248,248,248" />
+              </SvgPalette>
+            </Skin>
+          </CustomPaletteCollection>
+        </value>
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
