--- a/pet_management/App.config
+++ b/pet_management/App.config
@@ -8,10 +8,10 @@
   <applicationSettings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DefaultAppSkin" serializeAs="String">
-        <value>Skin/Office 2019 Colorful</value>
+        <value>Skin/Office 2010 Blue</value>
       </setting>
       <setting name="DefaultPalette" serializeAs="String">
-        <value>Custom/Custom Palette #1</value>
+        <value></value>
       </setting>
       <setting name="TouchUI" serializeAs="String">
         <value></value>
