--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -129,6 +129,12 @@
     <Compile Include="frmExamination.Designer.cs">
       <DependentUpon>frmExamination.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmLogin.Designer.cs">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -268,6 +274,9 @@
     <EmbeddedResource Include="frmExamination.resx">
       <DependentUpon>frmExamination.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmLogin.resx">
+      <DependentUpon>frmLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -339,6 +348,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="MailTemplate.html" />
+    <None Include="Resources\ic_report.svg" />
+    <None Include="Resources\icon_post_reward.svg" />
+    <None Include="Resources\ic_chooseasset_2x.svg" />
+    <None Include="Resources\ic_staff.svg" />
+    <None Include="Resources\ic_pet_color.svg" />
     <None Include="Resources\icon_assign.svg" />
     <None Include="Resources\ic_roles_white.svg" />
     <None Include="Resources\icon_technician.svg" />
