--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -104,6 +104,7 @@
     <Compile Include="PetBUS.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceivePetBUS.cs" />
     <Compile Include="RoleBUS.cs" />
     <Compile Include="ServiceBUS.cs" />
     <Compile Include="SpeciesBUS.cs" />
