--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -109,6 +109,7 @@
     <Compile Include="PetDAO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReceivePetDAO.cs" />
     <Compile Include="RoleDAO.cs" />
     <Compile Include="ServiceDAO.cs" />
     <Compile Include="SpeciesDAO.cs" />
