--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="entity\GroupService.cs" />
     <Compile Include="entity\Pet.cs" />
+    <Compile Include="PetData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="entity\Role.cs" />
