--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -90,12 +90,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ELItem.cs" />
     <Compile Include="entity\Breed.cs" />
     <Compile Include="entity\Customer.cs" />
     <Compile Include="DataTableUtils.cs" />
     <Compile Include="entity\Examination.cs" />
     <Compile Include="entity\Make.cs" />
     <Compile Include="entity\Part.cs" />
+    <Compile Include="ExaminationPart.cs" />
+    <Compile Include="ExaminationService.cs" />
     <Compile Include="ExaminationStatus.cs" />
     <Compile Include="ExaminationType.cs" />
     <Compile Include="Form1.cs">
