--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -111,6 +111,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompareExamination.cs" />
     <Compile Include="form\part\frmPart.cs">
       <SubType>Form</SubType>
     </Compile>
