--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -124,11 +124,23 @@
     <Compile Include="form\part\frmPartInfor.Designer.cs">
       <DependentUpon>frmPartInfor.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmEditItemEx.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmEditItemEx.Designer.cs">
+      <DependentUpon>frmEditItemEx.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmExamination.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="frmExamination.Designer.cs">
       <DependentUpon>frmExamination.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmExaminationItemDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmExaminationItemDetail.Designer.cs">
+      <DependentUpon>frmExaminationItemDetail.cs</DependentUpon>
     </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
@@ -285,8 +297,14 @@
     <EmbeddedResource Include="form\part\frmPart.resx">
       <DependentUpon>frmPart.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmEditItemEx.resx">
+      <DependentUpon>frmEditItemEx.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmExamination.resx">
       <DependentUpon>frmExamination.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmExaminationItemDetail.resx">
+      <DependentUpon>frmExaminationItemDetail.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
