--- a/BUS/BUS.csproj
+++ b/BUS/BUS.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceivePetBUS.cs" />
+    <Compile Include="ReportBUS.cs" />
     <Compile Include="RoleBUS.cs" />
     <Compile Include="ServiceBUS.cs" />
     <Compile Include="SpeciesBUS.cs" />
