--- a/pet_management/pet_management.csproj
+++ b/pet_management/pet_management.csproj
@@ -155,6 +155,12 @@
     <Compile Include="frmExaminationItemDetail.Designer.cs">
       <DependentUpon>frmExaminationItemDetail.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmExDataReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmExDataReport.Designer.cs">
+      <DependentUpon>frmExDataReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmLogin.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -166,6 +172,12 @@
     </Compile>
     <Compile Include="frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmPartReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPartReport.Designer.cs">
+      <DependentUpon>frmPartReport.cs</DependentUpon>
     </Compile>
     <Compile Include="frmPrintMedical.cs">
       <SubType>Form</SubType>
@@ -336,11 +348,17 @@
     <EmbeddedResource Include="frmExaminationItemDetail.resx">
       <DependentUpon>frmExaminationItemDetail.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmExDataReport.resx">
+      <DependentUpon>frmExDataReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmLogin.resx">
       <DependentUpon>frmLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPartReport.resx">
+      <DependentUpon>frmPartReport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrintMedical.resx">
       <DependentUpon>frmPrintMedical.cs</DependentUpon>
